--- a/src/resources/css/queries.css
+++ b/src/resources/css/queries.css
@@ -185,10 +185,34 @@
 /* Small phones: from 0 to 480px */
 
 @media only screen and (max-width: 480px) {
+  h1 {
+    margin: 0 0 0;
+  }
+  .hero-text-box a {
+    margin-top: 20px;
+  }
   section {
     padding: 25px 0;
   }
   .contact-form {
     width: 100%;
+  }
+  footer {
+    padding: 40px 12px;
+  }
+  .footer-nav,
+  .social-links {
+    float: none;
+    text-align: center;
+  }
+  .footer-nav li {
+    margin-right: 15px;
+    line-height: 1.5;
+  }
+  .social-links li {
+    margin-top: 4px;
+  }
+  footer p {
+    margin-top: 15px;
   }
 }
